HW5 added web interface and methods for allocating containers, though they don't want to start currently, falling with
2016-07-18 16:38:21.788  INFO 1271 --- [nio-8080-exec-3] o.s.yarn.am.AbstractAppmaster            : Registering application master with applicationAttemptId=appattempt_1468874301728_0000_000000 trackUrl=null rpcHost=null rpcPort=null
2016-07-18 16:38:21.927  INFO 1271 --- [nio-8080-exec-3] o.s.y.a.a.DefaultContainerAllocator      : Incoming containerAllocateData: [anyData=2, hostData=[size=0, {}], rackData=[size=0, {}]]
2016-07-18 16:38:21.938 ERROR 1271 --- [nio-8080-exec-3] o.a.c.c.C.[.[.[/].[dispatcherServlet]    : Servlet.service() for servlet [dispatcherServlet] in context with path [] threw exception [Request processing failed; nested exception is java.lang.NullPointerException] with root cause

java.lang.NullPointerException: null
	at org.springframework.yarn.am.allocate.DefaultContainerAllocator.allocateContainers(DefaultContainerAllocator.java:131) ~[spring-yarn-core-2.4.0.RELEASE.jar!/:2.4.0.RELEASE]
	at org.springframework.yarn.am.allocate.DefaultContainerAllocator.allocateContainers(DefaultContainerAllocator.java:109) ~[spring-yarn-core-2.4.0.RELEASE.jar!/:2.4.0.RELEASE]

--- a/Homework5/gs-yarn-basic-dist/pom.xml
+++ b/Homework5/gs-yarn-basic-dist/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>Homework5</artifactId>
@@ -138,7 +138,7 @@
                                                  host="${remote.host.ip}"
                                                  username="${remote.host.name}"
                                                  password="${remote.host.password}"
-                                                 command="docker run -d -it -v $PWD:/opt -v $PWD/yarn-site.xml:/usr/local/hadoop/etc/hadoop/yarn-site.xml --name ${docker.container.name} -p 8088:8088 -p 8042:8042 sequenceiq/hadoop-docker:2.7.1"
+                                                 command="docker run -d -it -v $PWD:/opt -v $PWD/yarn-site.xml:/usr/local/hadoop/etc/hadoop/yarn-site.xml --name ${docker.container.name} -p 8088:8088 -p 8042:8042 -p 8080:8080 sequenceiq/hadoop-docker:2.7.1"
                                                  timeout="120000"
                                                  usepty="true"
                                         />
