--- a/Homework5/gs-yarn-basic-container/pom.xml
+++ b/Homework5/gs-yarn-basic-container/pom.xml
@@ -13,6 +13,14 @@
         <artifactId>Homework5</artifactId>
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-yarn-boot</artifactId>
+            <version>2.4.0.RELEASE</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
